# telegram-support-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  data_module.py  docker-compose.yaml  mongo_db_config.py  pyproject.toml  requirements.txt  test_data-support_users-1-current_question_id  test_data.db  user_bot.py
app/: __main__.py  containers.py  errors.py  utils.py
app/answers/: containers.py  controller.py  entities.py  repo.py
app/bot/: bot.py  bot_handlers.py  bot_messages.py  containers.py  dtos.py  markup.py  states.py
app/config/: app_config.py  db_sa_config.py
app/entities/: answer.py  attachments.py  question.py  regular_user.py  role.py  support_user.py
app/localization/: en_messages_content.py  messages_content.py  messages_content_factory.py  ru_messages_content.py
app/loggers/: containers.py  logger.py
app/migrations/: alembic.ini
app/questions/: containers.py  controller.py  entities.py  repo.py
app/regular_users/: containers.py  controller.py  dtos.py  entities.py  queries.py  repo.py
app/roles/: containers.py  controller.py  entities.py  repo.py  value_objects.py
app/shared/: db.py  dtos.py  entities.py  value_objects.py
app/statistics/: containers.py  dtos.py  queries.py  (+1 more)
bot/: __main__.py  bot.py  bot_messages.py  handlers.py  init_db.py  markup.py  roles.py  settings.py  states.py  typing.py  utils.py
requirements/: dev.txt  prod.txt
tests/: conftest.py  db_test_config.py  test_db_config.py  test_messages.py  test_models.py  test_ready.py  test_sa_repo.py  test_utils.py  utils_for_tests.py
(+97 files in other folders)
